Added max perm gen support
Signed-off-by: Dalton Pelc <daltonjpelc@gmail.com>